# zs

./: .envrc  .gitignore  .rustfmt.toml  .treefmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
src/: cmd.rs  config.rs  main.rs  multiplexer.rs  repo.rs  session.rs  state.rs  util.rs  workspace.rs
src/cmd/: session.rs  workspace.rs
src/features/: direnv.rs  mod.rs
src/repo/: git.rs
