[package]
name = "zs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
git2 = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
dirs = "5.0"
anyhow = "1.0"
inquire = "0.9.1"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
